1.2.0 [2013-03-24]
 - NB! Using shapes such as (1,) and (1,1) instead of () for 1D tensor quantities I, x, grad(f)
 - Add cell.facet_diameter
 - Add new concept Domain
 - Add new concept Region, which is the union of numbered subdomains
 - Add integration over regions (which may be overlapping by sharing subdomains)
 - Add integration over everywhere
 - Add functions cosh, sinh, tanh, Max, Min
 - Generalize jump(v,n) for rank(v) > 2
 - Fix some minor bugs
1.1.0 [2013-01-07]
 - Add support for pickling of expressions (thanks to Graham Markall)
 - Add shorthand notation A**2 == inner(A, A), special cased for power 2.
 - Add support for measure sum notation f*(dx(0) + dx(3)) == f*dx(0) + f*dx(3)
 - Supporting code for bugfix in PyDOLFIN when comparing test/trial functions
 - Remove support for tuple form notation as this was ambiguous
 - Bugfix in quadrature degree estimation, never returning <0 now
 - Remove use of cmp to accomodate removal from python 3
1.1-alpha-prerelease [2012-11-18]
(Not released, snapshot archived with submission of UFL journal paper)
 - Support adding 0 to forms, allowing sum([a])
 - Major memory savings and optimizations.
 - Some bugfixes.
 - Add perp operator.
 - Support nested tuple syntax like MixedElement((U,V),W)
 - Allow outer(a, b, c, ...) by recursive application from left.
 - Add simplification f/f -> 1
 - Add operators <,>,<=,>= in place of lt,gt,le,ge
1.0.0 [2011-12-07]
 - No changes since rc1.
1.0-rc1 [2011-11-22]
 - Added tests covering snippets from UFL chapter in FEniCS book
 - Added more unit tests
 - Added operators diag and diag_vector
 - Added geometric quantities cell.surface_area and cell.facet_area
 - Fixed rtruediv bug
 - Fixed bug with derivatives of elements of type Real with unspecified cell
1.0-beta3 [2011-10-26]
 - Added nabla_grad and nabla_div operators
 - Added error function erf(x)
 - Added bessel functions of first and second kind, normal and modified,